# pretix-listmonk

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
docs/stories/: STORY-001.md  STORY-002.md
pretix_listmonk/: __init__.py  apps.py  forms.py  signals.py  tasks.py  urls.py  views.py
pretix_listmonk/locale/de/LC_MESSAGES/: django.mo  django.po
pretix_listmonk/locale/es/LC_MESSAGES/: django.mo  django.po
pretix_listmonk/locale/fr/LC_MESSAGES/: django.mo  django.po
pretix_listmonk/locale/nl/LC_MESSAGES/: django.mo  django.po
pretix_listmonk/templates/pretix_listmonk/: event_settings.html  organizer_settings.html
