[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pretix-listmonk"
version = "1.0.0"
description = "Pretix plugin to subscribe attendees to a Listmonk newsletter list"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Valentin Gosselin", email = "valentin@gosselin.pro"}
]
keywords = ["pretix", "plugin", "listmonk", "newsletter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Plugins",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/valentin-gosselin/pretix-listmonk"
Repository = "https://github.com/valentin-gosselin/pretix-listmonk"
Issues = "https://github.com/valentin-gosselin/pretix-listmonk/issues"

[project.entry-points."pretix.plugin"]
pretix_listmonk = "pretix_listmonk:ListmonkPluginConfig"

[tool.setuptools]
packages = ["pretix_listmonk"]
include-package-data = true

[tool.setuptools.package-data]
pretix_listmonk = [
    "templates/**/*.html",
    "locale/**/*.po",
    "locale/**/*.mo",
]
